general tidy-up